--- a/game.html
+++ b/game.html
@@ -1,1 +1,1 @@
-<html><head><title>redirect</title></head><body><button href="https://bestbinaryboi.github.io/officemayhemt2/web%20office%20mayhem%20builds">redirect</button></body></html>
+<html><head><title>redirect</title></head><body><p href="https://bestbinaryboi.github.io/officemayhemt2/web%20office%20mayhem%20builds">redirect</p></body></html>
